-finalized UI and navigation -finalized places screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,13 +24,15 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.android.support:design:24.2.0'
-    compile 'com.google.android.gms:play-services-places:9.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.google.android.gms:play-services-places:9.4.0'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'io.realm:android-adapters:1.3.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.matthew-tamlin:sliding-intro-screen:3.2.0'
 }
