--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+return void
 }
 
 dependencies {
@@ -35,4 +36,9 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.matthew-tamlin:sliding-intro-screen:3.2.0'
+    compile('com.mikepenz:aboutlibraries:5.8.1@aar') {
+        transitive = true
+    }
+    compile "com.mikepenz:iconics-core:2.8.1@aar"
+    compile 'com.mikepenz:weather-icons-typeface:2.0.10.2@aar'
 }
