--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,12 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+*.iml
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+
