-new icon (dark grey) -sub-header for tomorrow's prayers

--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Sep 30 08:12:48 EET 2016
-sdk.dir=D\:\\AndroidStudio\\SDK
+#Sat Oct 08 18:47:49 EET 2016
+sdk.dir=E\:\\AndroidJune6th\\SDK
