-location fragment opens automatically first time -empty state refreshed design -fixed today/tomorrow bug

--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Oct 08 18:47:49 EET 2016
-sdk.dir=E\:\\AndroidJune6th\\SDK
+#Sun Oct 09 06:21:09 EET 2016
+sdk.dir=D\:\\AndroidStudio\\SDK
