--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "24.0.0"
 
     defaultConfig {
-        applicationId "afterapps.meeqat"
+        applicationId "afterapps.miqat"
         minSdkVersion 16
         targetSdkVersion 24
         versionCode 1
@@ -44,4 +44,5 @@ dependencies {
     compile 'com.mikepenz:weather-icons-typeface:2.0.10.2@aar'
     compile 'com.zsoltsafrany:needle:1.0.0'
     compile 'com.mikepenz:fontawesome-typeface:4.6.0.3@aar'
+    compile 'com.android.support:cardview-v7:24.2.1'
 }
